--- a/assignment1Bs.html
+++ b/assignment1Bs.html
@@ -12,11 +12,13 @@
     <p class="bg-success p-3">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ducimus quod sit totam ab blanditiis perspiciatis magni, dolores facere quasi accusantium? Dignissimos, quaerat ipsum, eveniet doloremque neque id asperiores nobis atque commodi consequatur eaque mollitia! Voluptates atque nulla corrupti consequuntur!</p>
 
-    <h2 class="bg-warning">Welcome</h2>
+    <h2 class="text-white bg-warning">Welcome</h2>
 
-    <!-- Boostrap button classes -->
-              <input type="submit" value="Download Now" class="btn btn-outline-primary">
-              <input type="submit" value="Join Now" class="btn btn-outline-secondary">
-              <input type="submit" value="Subscribe" class="btn e-secondary">
+              <input type="submit" value="Download Now" class="btn btn-info mt-5">
+              <input type="submit" value="Join Now" class="btn btn-outline-success mt-5">
+              <input type="submit" value="Subscribe" class="btn btn-danger mt-5">
+
+              <h2 class="mt-4 text-info">Excellent</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reprehenderit ea maxime quaerat amet aperiam repudiandae excepturi sunt hic libero?</p>
     </body>
 </html>
